Fix right aligned images with no caption.

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -855,7 +855,7 @@ $cassette_btn_bg_color: $black;
 
   @media only screen and (min-width: 500px) {
     &.right {
-      max-width: 50%;
+      width: 50%;
       float: right;
       margin-left: 1rem;
       margin-bottom: 0.5rem;
